--- a/index.html
+++ b/index.html
@@ -324,15 +324,15 @@
             <div class="col-md-6">
                 <div class="project-item" data-image="image_path_2.png">
                     <h5>Genderless Kei - Japan's Hot</h5>
-                    <p>Set to launch on the manufacturer's new A330neo aircraft in 2017, it's offering lots of...</p>
+                    <p>Set to launch on the manufacturer's new<br>A330neo aircraft in 2017, it's offering lots of...</p>
                 </div>
                 <div class="project-item active" data-image="image_path_3.png">
                     <h5>Better Strategy & Quality</h5>
-                    <p>Set to launch on the manufacturer's new A330neo aircraft in 2017, it's offering lots of...</p>
+                    <p>Set to launch on the manufacturer's new<br>A330neo aircraft in 2017, it's offering lots of...</p>
                 </div>
                 <div class="project-item" data-image="image_path_4.png">
                     <h5>Genderless Kei - Japan's Hot</h5>
-                    <p>Set to launch on the manufacturer's new A330neo aircraft in 2017, it's offering lots of...</p>
+                    <p>Set to launch on the manufacturer's new<br> A330neo aircraft in 2017, it's offering lots of...</p>
                 </div>
             </div>
         </div>
